--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>events calendar</title>
   <link rel="stylesheet" type="text/css" href="css/main.css">
 
-  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/index.global.min.js"></script>
+  <script src="./js/calendar.js"></script>
   <script src="js/main.js"></script>
   <!-- 引入jQuery和Bootstrap -->
   <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css">
