--- a/index.html
+++ b/index.html
@@ -1,117 +1,38 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-  <!-- https://blog.csdn.net/JACK_SUJAVA/article/details/124411678 -->
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>login</title>
+        <link rel="stylesheet" type="text/css" href="css/login.css">
+    </head>
 
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="a calendar to use recording some events not merely including soccer matches">
-  <meta name="keywords" content="HTML,CSS,JavaScript,PHP,calendar">
-  <meta name="author" content="Zixi Dai">
-  <title>events calendar</title>
-  <link rel="stylesheet" type="text/css" href="css/main.css">
-
-  <script src="./js/calendar.js"></script>
-  <script src="js/main.js"></script>
-  <!-- 引入jQuery和Bootstrap -->
-  <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css">
-  <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.bundle.min.js"></script>
-  <script type="text/javascript"
-  src="https://cdn.jsdelivr.net/gh/Fuukei/Public_Repository@latest/static/js/sakura-less.js"></script>
-</head>
-<body>
-  <script type="text/javascript">
-    sakura('sakura', 'fall');
-  </script>
-  <header>
-    <div class="header">
-      <h1>FullCalendar</h1>
-      <p>Welcome to recording calendar!</p>
-    </div>
-  </header>
-
-  <nav>
-    <div class="topnav">
-      <a href="https://griedzx.github.io/">Home</a>
-      <a href="https://github.com/griedzx">About</a>
-      <a href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=lOf88frw4aSip6TU5eW69-v5">Contact</a>
-    </div>
-  </nav>
-
-  <div class="leftcolumn">
-    <input type="checkbox" id="blogEventsCheckbox" checked>
-    <label for="blogEventsCheckbox">Blog发布记录</label>
-  </div>
-
-  <div class ="rightcolumn">
-    <div id="calendar"></div>
-  </div>
-
-  <div class="leftcolumn">
-    <h2>Readme</h2>
-    <p>这是一个事件日历，可以记录一些事件，初始包含我博客文章的发布记录</p>
-  </div>
-
-  <div class="leftcolumn">
-    <p>김지원</p>
-
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="3000">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="assets/images/김지원/1.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="assets/images/김지원/2.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="assets/images/김지원/3.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="assets/images/김지원/4.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="assets/images/김지원/5.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="assets/images/김지원/6.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="assets/images/김지원/7.jpg" class="d-block w-100" alt="...">
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-  </div>
-
-  <!-- 在上述两个模块下新建一个模块，为一个窗口可以新加事件 -->
-  <div id="addEventModal" class="modal">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <h2>Add Event</h2>
-      <form id="addEventForm">
-        <label for="title">Title:</label>
-        <input type="text" id="title" name="title" required>
-        <label for="start">Start:</label>
-        <input type="datetime-local" id="start" name="start" required>
-        <label for="end">End:</label>
-        <input type="datetime-local" id="end" name="end" required>
-        <button type="submit">Add Event</button>
-      </form>
-    </div>
-  </div>
-
-  <div style="clear: both;"></div>
-
-  <footer>
-    <p class="footer">Copyright &copy; 2024 Zixi Dai | CC BY-NC 4.0</p>
-  </footer>
-</body>
+    <body>
+        <div class="box">
+            <!-- <img src="./assets/images/background/astronaut.jpg" alt="", > -->
+            <div class="register">
+                <h1>登录</h1>
+                <form action="./php/login.php" method="post" enctype="multipart/form-data">
+                <div class="register_r">
+                    <span>账号:</span>
+                    <input type="text" placeholder="请输入您的账号" name="username">
+                </div>
+                <div class="register_r">
+                    <span>密码:</span>
+                    <input type="password" placeholder="请输入您的密码" name="password">
+                </div>
+                <!-- <div class="register_e"> -->
+                    <!-- <span>验证码:</span>
+                    <input type="text" placeholder="请输入验证码验证">
+                    <canvas id="c1" width="90" height="35" style="border:1px solid black"></canvas>
+                    <span> </span>
+                </div> -->
+                <div class="register_g">
+                    <input type="checkbox">
+                    <span>记住账号密码</span>
+                </div>
+                <button class="register_i">登录</button>
+                </form>
+            </div>
+        </div>    
+    </body>
 </html>
