--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
                 </div>
                 <button class="register_i">登录</button>
                 </form>
+
+                <div class="test-account-info">
+                    <p>测试账户信息:</p>
+                    <p>账号: test</p>
+                    <p>密码: 123456</p>
+                </div>
             </div>
         </div>    
     </body>
