--- a/calendar.html
+++ b/calendar.html
@@ -9,6 +9,7 @@
   <meta name="keywords" content="HTML,CSS,JavaScript,PHP,calendar">
   <meta name="author" content="Zixi Dai">
   <title>events calendar</title>
+
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css">
 
@@ -20,9 +21,6 @@
 
 </head>
 <body>
-  <script type="text/javascript">
-      sakura('sakura', 'fall');
-  </script>
   <header>
     <div class="header">
       <h1>FullCalendar</h1>
@@ -37,6 +35,18 @@
       <a href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=lOf88frw4aSip6TU5eW69-v5">Contact</a>
     </div>
   </nav>
+
+  <div class="column">
+    <div id="heatmap" 
+    style="
+    display: block;
+    height: 200px;
+    width: 100%;
+    padding: 2px;
+    text-align: center;
+    margin-bottom: 20px;"
+    ></div>
+  </div>
 
   <div class="leftcolumn">
     <input type="checkbox" id="blogEventsCheckbox" checked>
@@ -76,9 +86,151 @@
       </a>
     </div>
   </div>
-
   <div style="clear: both;"></div>
 
+<script src="https://cdn.jsdelivr.net/npm/echarts@5.3.0/dist/echarts.min.js"></script>
+<script type="text/javascript">
+    var chartDom = document.getElementById('heatmap');
+    var myChart = echarts.init(chartDom);
+    window.onresize = function() {
+        myChart.resize();
+    };
+    var option;
+
+    // get date range by number of months
+    function getDateRange(months){            
+        var startDate = new Date();
+        var mill = startDate.setMonth((startDate.getMonth() - months));
+        var endDate = +new Date();
+        startDate = +new Date(mill);
+
+        endDate = echarts.format.formatTime('yyyy-MM-dd', endDate);
+        startDate = echarts.format.formatTime('yyyy-MM-dd', startDate);
+
+        var dateRange = [];
+        dateRange.push([
+            startDate,
+            endDate
+        ]);
+        return dateRange
+    };
+
+    // get number of months by window size
+    function getMonthCount(){
+        const windowWidth = window.innerWidth;
+        if (windowWidth >= 600) {
+            return 12;
+        }
+        if (windowWidth >= 400) {
+            return 9;
+        }
+        return 6;
+    }
+
+    fetch('https://griedzx.github.io/index.json')
+    .then(response => response.json())
+    .then(data => {
+        var postsByDate = data.reduce((acc, post) => {
+            var date = post.date;
+            var title = post.title;
+            var link = post.uri;
+            var wordCount = post.content.split(' ').length; // Assuming words are separated by spaces
+
+            if (!acc[date]) {
+                acc[date] = {
+                    posts: [],
+                    totalWordCount: 0
+                };
+            }
+
+        acc[date].posts.push({title: title, link: link});
+        acc[date].totalWordCount += wordCount;
+
+        return acc;
+    }, {});
+
+    console.log(postsByDate);
+
+    var heatmapData = [];
+    for (const [date, data] of Object.entries(postsByDate)) {
+        heatmapData.push([date, data.totalWordCount]);
+    }
+
+    option = {
+    title: {
+        show: true,
+        top: 0,
+        left: 'center',
+        text: '文章日历',
+    },
+    legend: {
+        show: false,
+    },
+    visualMap: {
+        show: false,
+        min: 0,
+        max: 10000,
+        type: 'piecewise',
+        showLable: false,
+        orient: 'horizontal',
+        left: 'center',
+        top: 0,
+        itemGap: 10,
+        inRange: {
+            color: ['#c4e8ff', '#47b4fc', '#0269ad'],
+        },
+    },
+    calendar: {
+        top: 50,
+        left: 30,
+        right: 30,
+        cellSize: ['auto', 'auto'],
+        range: getDateRange(getMonthCount()),
+        itemStyle: {
+            color: '#fff',
+            borderWidth: 0.5,
+            borderColor: '#eee',
+        },
+        yearLabel: { 
+            show: false,
+        },
+        dayLabel: {
+            align: 'center',
+            nameMap: 'ZH',
+        },
+        monthLabel: {
+            nameMap: 'ZH',
+        },
+        splitLine: {
+            show: false,
+        },
+    },
+    tooltip: {
+        hideDelay: 1000,
+        enterable: true,
+        formatter: function(params) {
+            const date = params.data[0];
+            const posts = postsByDate.get(date).get("posts");
+            var content = `${date}`;
+            for (const [i, post] of posts.entries()) {
+                content += "<br>";
+                var link = post.get("link");
+                var title = post.get("title");
+                content += `<a href="${link}" target="_blank">${title}</a>`
+            }
+            return content;
+        }
+
+    },
+    series: {
+        type: 'heatmap',
+        coordinateSystem: 'calendar',
+        data: heatmapData
+    }
+  };
+  option && myChart.setOption(option);
+});
+  </script>
   <footer>
     <p class="footer">Copyright &copy; 2024 Zixi Dai | CC BY-NC 4.0</p>
   </footer>
